--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,12 @@
 server {
-    server_name kamron.fil.uz;
+    server_name 157.245.192.13:8001;
 
     location /static/ {
-        root /var/www/django_null;
+        root /var/www/kamron;
     }
 
     location /media/ {
-        root /var/www/django_null;
+        root /var/www/kamron;
     }
 
     location /ws/ {
@@ -26,8 +26,10 @@ server {
 
 #     location / {
 #         include         proxy_params;
-#         proxy_pass http://unix:/var/www/django_null/project.sock;
+#         proxy_pass http://unix:/var/www/kamron/project.sock;
 #     }
+
+# todo backend tomon qoyilganda ochib qoyish kerak boaldi shu joyini
 
     error_log  /var/log/nginx/project-back-error.log;
     access_log /var/log/nginx/project-back-access.log;
